Projet_GL/src/test/deca/codegen/valid/unprovided/ok/exprArith.deca
// Test d'opération arithmetique simple
// Resultat
// 2

{
	int x = 1;
	int y = 2;
	x = 3 * x - y / 2;
	print(x);
}
