Projet_GL/src/test/deca/codegen/invalid/division_zero2.deca
// Test division zéro après opération

{
  int a = 1;
  int b = 2;
  int c = 2;
  a = a/(b-c);
  print(a);
}
